--- a/AeroVendas.ULF.Cliente/AeroVendas.ULF.Cliente.csproj
+++ b/AeroVendas.ULF.Cliente/AeroVendas.ULF.Cliente.csproj
@@ -5,14 +5,29 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
+	<ItemGroup>
+		<Compile Remove="Output\**" />
+		<Content Remove="Output\**" />
+		<EmbeddedResource Remove="Output\**" />
+		<None Remove="Output\**" />
+	</ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.11" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
     <PackageReference Include="Toolbelt.Blazor.HttpClientInterceptor" Version="10.2.0" />
   </ItemGroup>
 
+
+	<ItemGroup>
+		<None Include="Shared\MainLayout.razor" />
+		<None Include="Shared\NavMenu.razor" />
+		<None Include="Shared\SurveyPrompt.razor" />
+	</ItemGroup>
+	
   <ItemGroup>
     <ProjectReference Include="..\..\..\Microservices\AeroVendas.ULF.Services\Entities\Entities.csproj" />
     <ProjectReference Include="..\..\..\Microservices\AeroVendas.ULF.Services\Shared\Shared.csproj" />
