--- a/AeroVendas.ULF.Cliente/AeroVendas.ULF.Cliente.csproj
+++ b/AeroVendas.ULF.Cliente/AeroVendas.ULF.Cliente.csproj
@@ -14,7 +14,8 @@
 		<None Remove="Output\**" />
 	</ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Blazored.Toast" Version="4.0.0" />
+    <PackageReference Include="Blazored.LocalStorage" Version="4.3.0" />
+    <PackageReference Include="Blazored.Toast" Version="3.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="6.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.3" PrivateAssets="all" />
