--- a/AeroVendas.ULF.Cliente/wwwroot/appsettings.json
+++ b/AeroVendas.ULF.Cliente/wwwroot/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ApiConfiguration": {
-    "BaseAddress": "https://localhost:5011/ViewContratoSemAero"
+    "BaseAddress": "https://localhost:5011/"
   }
 
 }
